[package]
name = "wasmtime-hoot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.48", features = ["derive"] }
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
wasmtime = "37.0.1"
